# template-matching

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  app.py  check_status.sh  deploy.sh  packages.txt  pyproject.toml  requirements.txt  run_local.sh  run_simple.sh  setup.sh  template-matching-demo.py
