[project]
name = "template-matching"
version = "0.1.0"
description = "Interactive template matching demo using OpenCV and Streamlit"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "opencv-python-headless>=4.8.0",
    "streamlit>=1.28.0",
    "streamlit-image-coordinates>=0.1.6",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.17.0",
]

[tool.pylint."MESSAGES CONTROL"]
disable = ["c-extension-no-member"]

[tool.pyright]
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
